--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "prepare": "bob build",
-    "release": "release-it"
+    "prepack": "bob build"
   },
   "keywords": [
     "react-native",
@@ -56,7 +55,6 @@
     "@evilmartians/lefthook": "^1.5.0",
     "@expo/config-plugins": "^7.2.5",
     "@react-native/eslint-config": "^0.72.2",
-    "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
@@ -71,7 +69,6 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-builder-bob": "^0.20.0",
-    "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.0.2"
   },
@@ -101,23 +98,6 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore: release ${version}",
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": true
-    },
-    "github": {
-      "release": true
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular"
-      }
-    }
   },
   "eslintConfig": {
     "root": true,
