--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
       - run:
           name: Publish package
-          command: yarn publish --new-version $CIRCLE_TAG --no-commit-hooks --no-git-tag-version
+          command: yarn npm publish --new-version $CIRCLE_TAG --no-commit-hooks --no-git-tag-version
 workflows:
   version: 2
   build-and-publish:
