--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,14 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run:
+          name: Set release version
+          command: yarn version --new-version $CIRCLE_TAG
+      - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
       - run:
           name: Publish package
-          command: yarn npm publish --new-version $CIRCLE_TAG --no-commit-hooks --no-git-tag-version
+          command: yarn npm publish
 workflows:
   version: 2
   build-and-publish:
