Add NPM registry to .yarnrc

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,8 @@ nmHoistingLimits: workspaces
 
 nodeLinker: node-modules
 
+npmRegistryServer: "https://registry.npmjs.org/"
+
 plugins:
   - path: scripts/pod-install.cjs
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
